    Author: pepl at cpan dot org
    Applied by: Bas van der Vlies

  * Ticket fields can be set inline an email: closes #171, #88
     - controlled by parameter 'inline_properties', default behaviour off
     - see https://subtrac.sara.nl/oss/email2trac/wiki/Email2tracParse#Updateticketfields

    Author: samuel at hoffstaetter dot com
    Applied by: Bas van der Vlies

  * Fixed a bug when there is no subject line in the message, closes #179
    Reported by: xurizaemon
    Fixed by: Bas van der Vlies
   
 -- Bas van der Vlies <basv@sara.nl>  Wed, 27 Jan 2010 16:17:41 +0100

email2trac (1.1.0-6) stable; urgency=low

  * Workflow option did not work, closes #157 
    Reported by: thomas dot moschny at gmx dot de
    Fixed  by: Bas van der Vlies & Thomas Moschny
    
  * When a ticket is updated via email. We must set a changelog id,
    closes #156
    Reported by: Chris dot Nelson at SIXNET dot com 
    Fixed by: Bas van der Vlies

  * Changed all 'str =' assignments to 's =' to solve conflicts with
    the builtin str function
    Fixed by: Bas van der Vlies

  * Python egg cache enviroment setting was ignored by email2trac. 
    closes #163
    Author: Dennis McRitchie ( dmcr at Princeton dot EDU )
    Applied by: Bas van der Vlies

  * Disabled code so the following line will not be displayed anymore 
    as comment in a ticket:
     - This message has x attachment(s)
    Suggested by: dereks at realloc dot net, closes ticket #165
    Fixed by    : Bas van der Vlies


  * Added a new parameter strip_content_types. So we can strip attachments 
    based on content type, eg:
     - strip_content_types: application/pgp-signature, application/mac-binhex40

    Will strip attachments that has these content_types.
    Authors:  otto at bergerdata dot de and Bas van der Vlies

  * FIxed an error when files where added with characters that needed to be 
    escaped. Both email2trac and trac escaped the filenames. We removed the 